--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       crossorigin="anonymous"
     />
 
-    <title>Hello, world!</title>
+    <title>Clompass</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Clompass</a>
         <button
           class="navbar-toggler"
           type="button"
