--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link ref="stylesheet" href="src/styles.css">
 
     <title>Clompass</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="site-header sticky-top navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Clompass</a>
         <button
@@ -134,7 +135,21 @@
         </div>
       </div>
     </div>
+    
 
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+              <small class="d-block mb-3 text-muted-dark">© 2017-2019</small>
+            <p>this is some text</p>
+          </div>
+          
+        </div>
+      </div>
+
+    </footer>
+ 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
