updated footer added links and flex elements

--- a/index.html
+++ b/index.html
@@ -141,8 +141,16 @@
       <div class="container">
         <div class="row">
           <div class="col">
+              <h5>About Us</h5>
+              <ul class="list-unstyled text-small">
+                <li id="list"><a href="" class="link-light">About Us info</a></li>
+                <li id="list"><a href="" class="link-light">More Info</a></li>
+              </ul>
+              
               <small class="d-block mb-3 text-muted-dark">© 2017-2019</small>
-            <p>this is some text</p>
+          </div>
+          <div class="col">
+            <h5>Clompass support</h5>
           </div>
           
         </div>
