updated footer added more links and col's uesing flex and bootstrap

--- a/index.html
+++ b/index.html
@@ -151,6 +151,19 @@
           </div>
           <div class="col">
             <h5>Clompass support</h5>
+            <ul class="list-unstyled text-small">
+                <li id="list"><a href="" class="link-light">Email</a></li>
+                <li id="list"><a href="" class="link-light">Contact number</a></li>
+                <li id="list"><a href="" class="link-light">Discord server</a></li>
+              </ul>
+          </div>
+          <div class="col">
+            <h5>More Info</h5>
+            <ul class="list-unstyled text-small">
+                <li id="list"><a href="" class="link-light">Info</a></li>
+                <li id="list"><a href="" class="link-light">Extra Info</a></li>
+                <li id="list"><a href="" class="link-light">More Extra Info</a></li>
+              </ul>
           </div>
           
         </div>
