--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link ref="stylesheet" href="src/styles.css">
+    <link type="text/css" ref="stylesheet" href="src/styles.css">
 
     <title>Clompass</title>
   </head>
