--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </div>
     
 
-    <footer class="footer">
+    <footer class="footer" style="background-color: gray;">
       <div class="container">
         <div class="row">
           <div class="col">
