--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link type="text/css" ref="stylesheet" href="clompass-test.github.io/src/styles.css">
+    <link type="text/css" ref="stylesheet" href="./src/styles.css">
 
     <!-- Bootstrap CSS -->
     <link
