added learning task pannel

--- a/index.html
+++ b/index.html
@@ -137,6 +137,33 @@
       </div>
     </div>
     
+  <div class="container">
+    <div class="row">
+        <div class="col">
+
+          </div>
+      <div class="col">
+        <div class="list-group list-group-flush border-bottom scrollarea">
+          <a href="#" class="list-group-item list-group-item-action active py-3 lh-tight" aria-current="true">
+            <div class="d-flex w-100 align-items-center justify-content-between">
+            <strong class="mb-1">Learning Task</strong>
+              <small>Day</small>
+            </div>
+           <div class="col-10 mb-1 small">some infomation on the learning task and teacture </div>
+          </a>
+        </div>
+        <div class="list-group list-group-flush border-bottom scrollarea">
+            <a href="#" class="list-group-item list-group-item-action active py-3 lh-tight" aria-current="true">
+              <div class="d-flex w-100 align-items-center justify-content-between">
+                <strong class="mb-1">Learning Task</strong>
+                <small>Day</small>
+              </div>
+              <div class="col-10 mb-1 small">some infomation on the learning task and teacture </div>
+            </a>
+          </div>
+      </div>
+    </div>
+  </div>
 
     <footer class="footer">
       <div class="container">
