added learning task pannel

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class="row">
         <div class="col">
 
-          </div>
+        </div>
       <div class="col">
         <div class="list-group list-group-flush border-bottom scrollarea">
           <a href="#" class="list-group-item list-group-item-action active py-3 lh-tight" aria-current="true">
@@ -153,7 +153,7 @@
           </a>
         </div>
         <div class="list-group list-group-flush border-bottom scrollarea">
-            <a href="#" class="list-group-item list-group-item-action active py-3 lh-tight" aria-current="true">
+            <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
               <div class="d-flex w-100 align-items-center justify-content-between">
                 <strong class="mb-1">Learning Task</strong>
                 <small>Day</small>
