--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
       </div>
     </div>
-    
+    <!-- learning task contaner-->
   <div class="container">
     <div class="row">
         <div class="col">
@@ -164,6 +164,7 @@
       </div>
     </div>
   </div>
+    <!-- Footer-->
 
     <footer class="footer">
       <div class="container">
