--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </div>
     </div>
     <!-- learning task contaner-->
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
         <div class="col">
 
