--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Clompass</title>
   </head>
   <body>
-    <nav class="site-header sticky-top navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="site-header sticky-top navbar navbar-expand-lg navbar-dark bg-dark shadow">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Clompass</a>
         <button
