--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
   <div class="container">
     <div class="row">
         <div class="col">
-
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, eveniet dolorum? In soluta qui dignissimos facilis voluptatem ipsum aut quas mollitia explicabo, fuga sequi minus natus consectetur? Quasi, officiis numquam!</p>
+          <p>Iure nobis doloribus est harum dolor vitae rem eos modi? Praesentium sapiente, facere saepe aliquam cumque iure aspernatur ullam, maiores sed quaerat, placeat voluptates deleniti! Reiciendis iure sint voluptas ipsam?</p>
+          <p>Accusantium aliquid corporis magni consequatur aperiam ipsum ab placeat dolores officiis assumenda quam dolor maiores mollitia labore explicabo, non quibusdam iure, veniam illum quisquam omnis fugit id ipsa. Exercitationem, tempore.</p>
+          <p>Praesentium repudiandae dolore voluptates et maxime rerum nesciunt. Nihil vero perferendis sequi. Labore dolore mollitia blanditiis nihil delectus ea dignissimos odit tempora quis doloribus quos magnam exercitationem quo, culpa nesciunt.</p>
         </div>
       <div class="col">
         <div class="list-group list-group-flush border-bottom scrollarea">
@@ -164,9 +167,10 @@
       </div>
     </div>
   </div>
+  
     <!-- Footer-->
 
-    <footer class="footer">
+    <footer class="footer mt-auto py-1 bg-secondary-gradient">
       <div class="container">
         <div class="row">
           <div class="col">
