--- a/index.html
+++ b/index.html
@@ -137,34 +137,43 @@
       </div>
     </div>
     <!-- learning task contaner-->
+  
   <div class="container">
     <div class="row">
         <div class="col">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, eveniet dolorum? In soluta qui dignissimos facilis voluptatem ipsum aut quas mollitia explicabo, fuga sequi minus natus consectetur? Quasi, officiis numquam!</p>
-          <p>Iure nobis doloribus est harum dolor vitae rem eos modi? Praesentium sapiente, facere saepe aliquam cumque iure aspernatur ullam, maiores sed quaerat, placeat voluptates deleniti! Reiciendis iure sint voluptas ipsam?</p>
-          <p>Accusantium aliquid corporis magni consequatur aperiam ipsum ab placeat dolores officiis assumenda quam dolor maiores mollitia labore explicabo, non quibusdam iure, veniam illum quisquam omnis fugit id ipsa. Exercitationem, tempore.</p>
-          <p>Praesentium repudiandae dolore voluptates et maxime rerum nesciunt. Nihil vero perferendis sequi. Labore dolore mollitia blanditiis nihil delectus ea dignissimos odit tempora quis doloribus quos magnam exercitationem quo, culpa nesciunt.</p>
+          <div class="card ">
+            <div class="card-body text-muted">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, eveniet dolorum? In soluta qui dignissimos facilis voluptatem ipsum aut quas mollitia explicabo, fuga sequi minus natus consectetur? Quasi, officiis numquam!</p>
+              <p>Iure nobis doloribus est harum dolor vitae rem eos modi? Praesentium sapiente, facere saepe aliquam cumque iure aspernatur ullam, maiores sed quaerat, placeat voluptates deleniti! Reiciendis iure sint voluptas ipsam?</p>
+              <p>Accusantium aliquid corporis magni consequatur aperiam ipsum ab placeat dolores officiis assumenda quam dolor maiores mollitia labore explicabo, non quibusdam iure, veniam illum quisquam omnis fugit id ipsa. Exercitationem, tempore.</p>
+              <p>Praesentium repudiandae dolore voluptates et maxime rerum nesciunt. Nihil vero perferendis sequi. Labore dolore mollitia blanditiis nihil delectus ea dignissimos odit tempora quis doloribus quos magnam exercitationem quo, culpa nesciunt.</p>
+            </div>
+          </div>
         </div>
       <div class="col">
+        <div class="card">
         <div class="list-group list-group-flush border-bottom scrollarea">
           <a href="#" class="list-group-item list-group-item-action active py-3 lh-tight" aria-current="true">
             <div class="d-flex w-100 align-items-center justify-content-between">
             <strong class="mb-1">Learning Task</strong>
               <small>Day</small>
             </div>
+          </div>
            <div class="col-10 mb-1 small">some infomation on the learning task and teacture </div>
           </a>
         </div>
-        <div class="list-group list-group-flush border-bottom scrollarea">
-            <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
-              <div class="d-flex w-100 align-items-center justify-content-between">
+        <div class="card">
+            <div class="list-group list-group-flush border-bottom scrollarea">
+              <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
+                <div class="d-flex w-100 align-items-center justify-content-between">
                 <strong class="mb-1">Learning Task</strong>
-                <small>Day</small>
+                  <small>Day</small>
+                </div>
               </div>
-              <div class="col-10 mb-1 small">some infomation on the learning task and teacture </div>
-            </a>
-          </div>
-      </div>
+               <div class="col-10 mb-1 small">some infomation on the learning task and teacture </div>
+              </a>
+            </div>
+    
     </div>
   </div>
   
